Fix modal server enterprise settings: dark-mode readonly input, SMTP field alignment and remove color picker wrapper

--- a/assets/css/layout/_main.scss
+++ b/assets/css/layout/_main.scss
@@ -1385,6 +1385,19 @@ a:hover {
   border-radius: 4px;
 }
 
+.form-control-color {
+  padding: 0;
+
+  &::-webkit-color-swatch {
+    border: none;
+    border-radius: 5px;
+  }
+
+  &::-moz-color-swatch {
+    border: none;
+    border-radius: 5px;
+  }
+}
 
 .btn-outline-white {
   border-color: white;
